--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ contact: >
 nav_pages:
   - name: about
   - name: publications
-  - name: talks
+  # - name: talks
   - name: research \& projects
   - name: software
   # - name: team
