--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: PhD. Roben Castagna Lunardi
 email: roben.lunardi at restinga.ifrs.edu.br
 description: Personal webpage of Roben C. Lunardi
 baseurl: ""
-url: "https://robenlunardi.github.io"
+url: ""
 affiliation: I am part of the  SciFi group at IFRS  - Campus Restinga.
 
 # Google analytics ID
