--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ location: >
 
 # Contact info. (shown in footer)
 contact: >
-    Contact me via email: roben.lunardi at restinga.ifrs.edu.br<br/>
+    Contact me via email: roben.lunardiATrestinga.ifrs.edu.br<br/>
 
 # Pages shown in navbar
 nav_pages:
