--- a/_data/grants.yml
+++ b/_data/grants.yml
@@ -1,5 +1,5 @@
-  - name: 2018 Australia-Americas Research Internship - Mobility Grant Award
-  name_url: https://www.pucrs.br/en/blog/graduate-students-awarded-mobility-grant-to-australia/
-  organisation: Australian Academy of Science
-  organisation_url: https://www.science.org.au/
-  year: 2018
+- name: "2018 Australia-Americas Research Internship - Mobility Grant Award"
+name_url: "https://www.pucrs.br/en/blog/graduate-students-awarded-mobility-grant-to-australia/"
+organisation: Australian Academy of Science
+organisation_url: https://www.science.org.au/
+year: 2018
