--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ url: ""
 
 # Footer info
 affiliation: >
-    PhD. Roben Castagna Lunardi<br/>
+    Roben Castagna Lunardi, PhD<br/>
     Associate Professor<br/>
     <a href="http://ifrs.edu.br/restinga" target="_blank">Campus Restinga</a><br/>
     Federal Institute of Education, Science and Technology of Rio Grande do Sul (IFRS)
