--- a/_data/publist.yaml
+++ b/_data/publist.yaml
@@ -1,12 +1,15 @@
--  author: Lunardi, Roben C., Michelin, Regio A., Neu, Charles V., Nunes, Henry C., Zorzo, Avelino F., Kanhere, Salil S.
-  title: "Impact of Consensus on Appendable-Block Blockchain for IoT"
+- title: "Impact of Consensus on Appendable-Block Blockchain for IoT"
+
+  author: Lunardi, Roben C., Michelin, Regio A., Neu, Charles V., Nunes, Henry C., Zorzo, Avelino F., Kanhere, Salil S.
   year = {2019}, isbn: "9781450372831"
   publisher = {association for computing machinery},  booktitle: "2EAI International Conference on Mobile and Ubiquitous Systems: Computing, Networking and Services"
   pages = {228–237}, numpages: "10"
   keywords: "IoT, security, distributed ledgers, blockchain, consensus"
   doi: "10.1145/3360774.3360798"
--  author: A. F. Zorzo, H. C. Nunes, R. C. Lunardi, R. A. Michelin, S. S. Kanhere
-  title: "Dependable IoT Using Blockchain-Based Technology"
+
+- title: "Dependable IoT Using Blockchain-Based Technology"
+
+  author: A. F. Zorzo, H. C. Nunes, R. C. Lunardi, R. A. Michelin, S. S. Kanhere
   booktitle: "Latin-American Symposium on Dependable Computing"
   year: 2018
   volume: 
