--- a/publications/publist.yaml
+++ b/publications/publist.yaml
@@ -1,8 +1,11 @@
 - title: "Impact of Consensus on Appendable-Block Blockchain for IoT"
   author: Lunardi, Roben C., Michelin, Regio A., Neu, Charles V., Nunes, Henry C., Zorzo, Avelino F., Kanhere, Salil S.
-  year = {2019}, isbn: "9781450372831"
-  publisher = {association for computing machinery},  booktitle: "2EAI International Conference on Mobile and Ubiquitous Systems: Computing, Networking and Services"
-  pages = {228–237}, numpages: "10"
+  year: 2019
+  isbn: "9781450372831"
+  publisher: "Association for Computing Machinery"
+  booktitle: "2EAI International Conference on Mobile and Ubiquitous Systems: Computing, Networking and Services"
+  pages: "228–237"
+  numpages: "10"
   keywords: "IoT, security, distributed ledgers, blockchain, consensus"
   doi: "10.1145/3360774.3360798"
 
